Wrapped <label> tag around correct destination country textbox <input> tag so it appears next to it on screen.

--- a/chisha.css
+++ b/chisha.css
@@ -30,7 +30,7 @@ h1 {
     font-size: 4rem;
     letter-spacing: 1rem;
     text-align: center;
-    padding: 10px;
+    
 }
 
 h2 {
